refactor: 更新文档快速开始部分